# NS-2.1b8a-MacOS

./: .gitignore  bt_patch  bt_patch_make  install
cweb/: ctangle  cweave
lib/: tkConfig.sh
nam-1.0a10/: CHANGES.html  FILES  Makefile  Makefile.in  agent.cc  agent.h  animation.cc  animation.h  autoconf.h  config.cache  config.status  configure  drop.cc  edge.cc  edge.h  editview.cc  editview.h  enetmodel.cc  enetmodel.h  graphview.cc  graphview.h  group.cc  lan.cc  main.cc  makefile.vc  nam  nam-1.0a10  nam_stream.cc  netmodel.cc  netmodel.h  netview.cc  netview.h  node.cc  node.h  packet.cc  packet.h  paint.cc  paint.h  parser.cc  parser.h  (+17 more)
ns-2.1b8a/: CHANGES.html  Decapsulator.cc  Decapsulator.h  Encapsulator.cc  Encapsulator.h  FILES  Makefile  Makefile.in  Makefile.in.orig  MySnoop.tcl  Snoop.pat  TODO.html  VERSION  ack-recons.cc  ack-recons.h  acto-adc.cc  actp-adc.cc  adaptive-receiver.cc  adaptive-receiver.h  adc.cc  adc.h  addr-params.cc  addr-params.h  address.cc  agent.cc  agent.h  alloc-address.cc  arp.cc  autoconf.h  baseband.cc  bi-connector.h  bt-classify.cc  bt-classify.h  bt-drr.cc  (+240 more)
tclcl-1.0b11/: CHANGES.html  FILES  Makefile  Makefile.in  Tcl.cc  Tcl2.cc  backTcl.h  config.cache  config.status  configure  configure.in  embedded-tcl.cc  embedded-tclobj.cc  embedded-tk.cc  idlecallback.cc  idlecallback.h  iohandler.cc  iohandler.h  makefile.vc  rate-variable.cc  rate-variable.h  tcl-http.tcl  tcl-import.tcl  tcl-object.tcl  tcl2c++  tcl2c++.c  tclcl-mappings.h  tclcl.h  timer.cc  timer.h  tracedvar.cc
tclcl-1.0b11/conf/: configure.in.TclCL
(+969 files in other folders)
